fix distortion

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -298,6 +298,8 @@ h3,
 
 .image {
   vertical-align: middle;
+
+  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
 }
 
 .distortion-text {
@@ -309,6 +311,8 @@ h3,
 }
 
 .distortion-desc {
+  margin-top: 29px;
+
   font-weight: normal;
   font-size: 34px;
   font-family: Neucha, sans-serif;
@@ -321,6 +325,7 @@ h3,
   margin-bottom: 20px;
   padding-left: 10px;
 
+  font-weight: bold;
   font-size: 14px;
   font-family: OpenSans, sans-serif;
   line-height: 28.8px;
